# pydantic-partials

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  versions.json
.github/workflows/: publish-docs.yml  push-main.yml  test.yml
1.0.0/: 404.html  index.html
1.0.0/changelog/: index.html
1.0.0/search/: search_index.json
1.0.1/api/pydantic_partials/: meta.html
1.0.1/changelog/: index.html
1.0.1/search/: search_index.json
1.0.2/: index.html
1.0.2/api/pydantic_partials/: partial.html
1.0.2/api/xsentinels/: unwrap.html
1.0.2/changelog/: index.html
1.0.2/search/: search_index.json
1.0.3/: index.html
1.0.3/changelog/: index.html
1.0.3/search/: search_index.json
1.0.4/: 404.html  index.html
1.0.4/api/xsentinels/: singleton.html
1.0.4/changelog/: index.html
1.0.4/search/: search_index.json
1.0.5/: index.html
1.0.5/changelog/: index.html
1.0.5/search/: search_index.json
1.0.6/: index.html
1.0.6/changelog/: index.html
1.0.6/search/: search_index.json
1.0.7/: index.html
1.0.7/api/pydantic_partials/: meta.html  partial.html  sentinels.html
1.0.7/changelog/: index.html
1.0.7/search/: search_index.json
1.0.8/: 404.html  index.html
1.0.8/changelog/: index.html
1.0.8/search/: search_index.json
1.1.0/: index.html
1.1.0/changelog/: index.html
1.1.0/search/: search_index.json
2.0.0/: 404.html  index.html
2.0.0/changelog/: index.html
2.0.0/search/: search_index.json
2.0.1/: index.html
2.0.1/changelog/: index.html
2.0.1/search/: search_index.json
2.0.2/: index.html
2.0.2/changelog/: index.html
2.0.2/search/: search_index.json
3.0.0/: index.html
3.0.0/changelog/: index.html
3.0.0/search/: search_index.json
4.0.0/: 404.html  index.html  objects.inv
4.0.0/changelog/: index.html
4.0.0/search/: search_index.json
docs/: index.md
pydantic_lazy/: __init__.py  config.py  missing.py  partial.py  remote.py
pydantic_partials/: __init__.py  config.py  make_missing_falsy.py  meta.py  partial.py  sentinels.py
tests/: conftest.py  test_basic_model.py  test_doc_examples.py  test_inheritance.py  test_patch_missing_to_make_falsy.py
(+48 files in other folders)
